--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,5 +1,11 @@
 FROM node:16.14-alpine
+
 WORKDIR /app-backend
-COPY package* ./
+
+COPY package* .
+
 RUN npm install
-COPY ./src ./src
+
+COPY . .
+
+CMD ["npm", "start"]
